# dopl-dev

./: .cursorrules  .gitignore  CLAUDE.md  LICENSE  README.md  VALIDATION_REPORT.md  requirements-dev.in
.github/workflows/: agent_ci.yml  e2e_ci.yml  sdk_ci.yml
agent/: Dockerfile  README.md  go.mod
agent/cmd/record-agent/: main.go
agent/internal/config/: config.go  config_test.go
agent/internal/health/: handlers.go  health.go  health_test.go
agent/internal/ingest/: decoder.go  decoder_test.go  ingest.go  ingest_test.go  queue.go  queue_test.go  types.go  validator.go  validator_test.go
agent/internal/logging/: logging.go
agent/internal/metrics/: metrics.go
deploy/kustomize/: kustomization.yaml
docs/: phase3-spec.md
examples/demo_flask_app/: app.py  project-plan.docx  run_test.py  sim.yaml
examples/flask_app/: README.md  app.py  requirements.txt
examples/plain_python/: README.md  demo.py  requirements.txt
fixture_service/: __init__.py  __main__.py  config.py  indexer.py  metrics.py
fixture_service/tests/: test_config.py  test_indexer.py  test_metrics.py
landing/: index.html
scripts/: record.py
sim_sdk/: README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-optional.in  requirements-optional.txt  requirements.in  requirements.txt
sim_sdk/sim_runner/: __init__.py  replay_cli.py
sim_sdk/sim_sdk/: __init__.py  canonical.py  canonicalize.py  capture.py  clock.py  config.py  context.py  db.py  db_adapter.py  diff.py  errors.py  fetch.py  fixture_uploader.py  flask_middleware.py  http.py  http_patch.py  redaction.py  replay_context.py  runner.py  s3_sink.py  sampling.py  sink.py  store.py  stub_store.py  trace.py
sim_sdk/sim_sdk/fixture/: __init__.py  schema.py  writer.py
sim_sdk/sim_sdk/sink/: __init__.py  agent_client.py  agent_sink.py  envelope.py  in_memory_buffer.py  local.py  record_sink.py  s3.py  sender_metrics.py  sender_worker.py
sim_sdk/tests/: __init__.py  conftest.py  test_canonical.py  test_canonicalize.py  test_capture.py  test_clock.py  test_context.py  test_context_metadata.py  test_db.py  test_db_adapter.py  test_diff.py  test_fixture_uploader.py  test_flask_middleware.py  test_http.py  test_http_patch.py  test_redaction.py  test_replay_context.py  test_sampling.py  test_sampling_integration.py  test_sink.py  test_store.py  test_stub_store.py  test_trace.py
sim_sdk/tests/fixtures/: calculate_quote.json
tests/: test_canonical.py  test_capture.py  test_context.py  test_db.py  test_integration.py  test_redaction.py  test_sink_local.py  test_sink_s3.py  test_trace.py
tools/scripts/: gen_schema_docs.sh  release_agent.sh  release_sdk.sh
(+33 files in other folders)
