[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-sdk"
version = "0.1.0"
description = "Simulation SDK for deterministic capture and replay of service interactions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=2.0",
    "requests>=2.28",
    "psycopg2-binary>=2.9",
    "jsonpath-ng>=1.5",
    "deepdiff>=6.0",
    "pyyaml>=6.0",
]

[project.scripts]
sim-run = "sim_sdk.runner:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio>=0.23",
    "responses>=0.23",
    "testing.postgresql>=1.3",
]
protobuf = [
    "protobuf>=4.0",
]
avro = [
    "fastavro>=1.8",
]
sql = [
    "sqlparse>=0.4",
]
serialization = [
    "protobuf>=4.0",
    "fastavro>=1.8",
    "sqlparse>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
